2009-08-28  Ian Beckwith  <ianb@erislabs.net>

	* New elvi: genbugs (thanks to Nick White).

2009-07-23  Ian Beckwith  <ianb@erislabs.net>

	* Fixed tests: excite, pgpkeys, javasun. ebay(my)

2009-07-21  Ian Beckwith  <ianb@erislabs.net>

	* New elvi: debvcsbrowse.
	* err(): write to stderr instead of stdout.

2009-06-28  Ian Beckwith  <ianb@erislabs.net>

	* Bump version to 2.2.6.
	* Only use first matching bookmark (Thanks to Carl Fredrik Hammar).

2009-05-13  Ian Beckwith  <ianb@erislabs.net>

	* Replaced scaleplus with comlaw.
	* debpackages, debcontents: updated ubuntu release names.

2009-05-12  Ian Beckwith  <ianb@erislabs.net>

	* archpkg, bbcnews, debcontents, debwiki: fixed tests.

2009-04-05  Ian Beckwith  <ianb@erislabs.net>

	* Support '--' to indicate end of options, so, for instance,
	  "sr google -g -- foo -bar" works. Thanks to Andy Valencia.

2009-03-09  Ian Beckwith  <ianb@erislabs.net>

	* Bump version to 2.2.5.
	* rfc: Default to HTML for RFCs and BCPs.
	  Thanks to Micah Anderson.
	* rfc.test: Test tools.ietf.org.

2009-02-28  Ian Beckwith  <ianb@erislabs.net>

	* Changed cite to use citeseerx.ist.psu.edu, the old
	  site is no longer being updated. Modified
	  command line options to match new site.
	* Amazon: fixed; updated categories.

2009-02-27  Ian Beckwith  <ianb@erislabs.net>

	* New elvis: aur. Thanks to René Reigel.

2008-12-03  Ian Beckwith  <ianb@erislabs.net>

	* New elvis: urban. Thanks to J. R. Mauro.
	* Added test for urban.
	* Fixed elvis: excite.
	* Fixed test: stockquote.

2008-10-23  Ian Beckwith  <ianb@erislabs.net>

	* Bumped version to 2.2.4.
	* New elvi: ntrs, scicom, springer.
	  Thanks to Wim Van Hoydonck.
	* Added tests for ntrs and springer
	  Scicom cannot be tested as it needs javascript.

2008-09-13  Ian Beckwith  <ianb@erislabs.net>

	* Default to graphical mode. See surfraw(1) for how to change it back.
	* New elvis: piratebay, genportage. Thanks to J.R. Mauro.
	* Add tests for piratebay and genportage.